Migrating to EF 7

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "data source=.;database=superhero_db;user id=sa;pwd=P@ssword123456"
+    "DefaultConnection": "data source=.;database=superhero_db;user id=sa;pwd=P@ssword123456;Trust Server Certificate=true"
   },
   "Logging": {
     "LogLevel": {
